After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691513 - session manager rejects ICE/XSMP connections after shutdown was cancelled
session manager rejects ICE/XSMP connections after shutdown was cancelled
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-11 01:18 UTC by Mantas Mikulėnas (grawity)
Modified: 2013-03-04 14:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Re-accept XSMP clients if session shutdown is cancelled (2.09 KB, patch)
2013-02-06 00:22 UTC, Michael Chapman
committed Details | Review

Description Mantas Mikulėnas (grawity) 2013-01-11 01:18:50 UTC
If I select "Power Off" or "Log Out" in gnome-shell's menu, but then cancel the confirmation prompt, gnome-session remains in the "shutting down" state and refuses new ICE connections forever.

...
gnome-session[3823237]: DEBUG(+): GsmManager: requesting shutdown
gnome-session[3823237]: DEBUG(+): GsmManager: ending phase RUNNING
gnome-session[3823237]: DEBUG(+): GsmManager: starting phase QUERY_END_SESSION
gnome-session[3823237]: DEBUG(+): gsm_xsmp_server_stop_accepting_new_clients
...
gnome-session[3823237]: DEBUG(+): GsmManager: Cancelling the end of session
gnome-session[3823237]: DEBUG(+): GsmManager: starting phase RUNNING
...
gnome-session[3823237]: DEBUG(+): GsmXsmpServer: In shutdown, rejecting new client
...

Using: gnome-session 3.7.3.r5.g079bbf4-1
Comment 1 Michael Chapman 2013-02-06 00:22:52 UTC
Created attachment 235272 [details] [review]
Re-accept XSMP clients if session shutdown is cancelled

This bug appears to be due to the changes introduced in bug 688209, where the XSMP server is told to stop accepting new clients as soon as the QUERY_END_SESSION phase starts. If the session shutdown is cancelled, it needs to start accepting clients again.

This patch tells it to start (re-)accepting clients on entry to the RUNNING phase.
Comment 2 Matthias Clasen 2013-02-07 02:20:15 UTC
Review of attachment 235272 [details] [review]:

Looks good to me