xsmp: Re-accept clients if session shutdown is cancelled

This commit makes sure that gnome-session will accept XSMP
clients again after a user cancels shutdown.

https://bugzilla.gnome.org/show_bug.cgi?id=691513